feat: overhaul admin experience and migration support
